--- a/src/stylesheets/locations.css
+++ b/src/stylesheets/locations.css
@@ -36,3 +36,17 @@ footer {
     color: black;
     text-emphasis: bold;
 }
+
+.teton_jumbo {
+    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("https://images.unsplash.com/photo-1532357325337-70eab733da87?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
+    color: black;
+    text-emphasis: bold;
+    
+}
+
+.yosemite_jumbo {
+    background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)), url("https://images.unsplash.com/photo-1562310503-a918c4c61e38?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
+    color: black;
+    text-emphasis: bold;
+    
+}
