--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -61,3 +61,12 @@ body{
     display: flex;
     flex-direction: column;
 }
+.comments-heading {
+    margin: 40px;
+    font-size: 2rem;
+    border: 2px solid black;
+    padding: 20px;
+    border-radius: 20px;
+    color: black;
+    text-align: center;
+}
